Fixed position for Add Ticket Button, set preview pane visible with message to select a ticket to show preview, set media query for hiding preview pane and nav drawer

--- a/src/components/ticket/ticket.css
+++ b/src/components/ticket/ticket.css
@@ -18,11 +18,11 @@
 
 /* Ticket Styles */
 .ticket-list{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 100vh;
     /* max-width: 615px; */
-    margin-top: 24px !important;
-    margin-left: 27px !important;
+    padding-top: 24px !important;
+    padding-left: 27px !important;
 }
 
 ul.active{
@@ -71,7 +71,14 @@ ul.active{
 
 /* Media Queries */
 @media screen and (max-width: 1100px){
-    .previewDrawer{
+    #rightPane {
         display: none;
     }
+    #addTicketButton {
+        right: 50px;
+    }
+    .ticket-list {
+        width: 100%;
+    }
+
 }
