--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,9 @@ code {
     padding: 150px 0;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  #navDrawer {
+    display: none;
+  }
+}
